# gitjob_for_show

./: .gitignore  Dockerfile  README.md  compose.yml  conftest.py  pyproject.toml  pyrightconfig.json
